practice/05_unary/syntax.txt
add: mul
add: add "+" mul
add: add "-" mul
mul: unary
mul: mul "*" unary
mul: mul "/" unary
unary: "+" term
unary: "+" term
unary: term
term: num
term: "(" add ")"


add: mul addx
addx:
addx: "+" mul addx
addx: "-" mul addx
mul: unary mulx
mulx:
mulx: "*" unary mulx
mulx: "/" unary mulx
unary: "+" term
unary: "+" term
unary: term
term: num
term: "(" add ")"
